# Jupiter

./: CMakeLists.txt  README.md  common.mk  run_table4.sh
common/: graph.cc  graph_partition.cc  scheduler.cc
include/: common.h  global_buffer.h  graph.h  graph_gpu.h  graph_gpu_nvs.h  graph_partition.h  operations.cuh  set_difference.cuh  set_intersect.cuh
src/: config.h  context_manager_engine.cuh  delegation_gpu_kernels.cuh  delegator_engine.cuh  gpu_kernels_codegen.cuh  jupiter_gpm.cu  main.cc  message_passing_gpu_kernels.cuh
